--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	    <script src="js/core.js"></script>
 	    <script src="js/cm.js"></script>
 	    <script src="js/bslider.js"></script>
-	    
+
 	    <script>
 
 			document.write('<meta name="viewport" content="">');
@@ -65,19 +65,24 @@
 
 		    		<div class = "price_information" >
 		    			<div class = "day">
-		    				<h2> 5,94</h2>
+		    				<h2 class = "dkw"> 5,94</h2>
 		    				<p style="line-height: 1.0; padding-top: 13px "> день <br>
 		    					кВтч <br>
 		    				рублей </p>
 		    			</div>
 
 		    			<div class = "night">
-		    				<h2> 3,84</h2>
+		    				<h2 class = "nkw"> 3,84</h2>
 		    				<p style="line-height: 1.0; padding-top: 13px "> ночь <br>
 		    					кВтч <br>
 		    				рублей </p>
 		    			</div>
+
+
 		    		</div>
+					<div style="text-align: center">
+						<img src="img/calc.png" />
+					</div>
 		    		<br>
 		    		<br>
 		    	</section>
@@ -110,35 +115,7 @@
 			    		</div>
 			    		<br>
 			    		<div class = "new_body">
-			    			<p>Для обеспечения потребителей Республики Саха (Якутия) качественной и бесперебойной электроэнергией, специалисты Центральных и Западных электрических сетей ежедневно ведут работы по подключению новых абонентов к электрическим сетям и последовательные ремонтные работы на объектах электросетевого хозяйства, которые невозможны без введений плановых временных ограничений электроснабжения.
-
-							Для удобства наших потребителей основная часть ремонтных работ проводится в дневное время рабочих будней, когда существенно снижено потребление электроэнергии. Временные ограничения электроснабжения 28 ноября в г. Якутске и ряде районов будут проводиться по следующему графику:
-
-							г. Якутск:
-
-							09:00-12:00 – Покровский тракт 10 км – работы по технологическому присоединению потребителей;
-
-							09:00-12:00 – Якова Потапова 27/1, Лермонтова 26 – работы в охранной зоне энергообъектов;
-
-							09:00-12:00 – Билибина 42/4 – пасынковка опоры;
-
-							09:00-17:00 –             1-я Пристанская, 2-я Пристанская (частично), 50 лет Советской Армии 86/3-106 – капитальный ремонт ВЛ;
-
-							09:00-17:00 – Стерхмкр-н, Сергеляхское поле (частично), Набережная 89, Ушакова 6 – работы по заявкам Якутского отделения Энергосбыта;
-
-							14:00-17:00 – Лермонтова 26, Малая Марха (частично) – работы в охранной зоне энергообъектов.
-
-							Мирнинский район:
-
-							10:00-12:00 – г. Мирный (Вилюйская, Иреляхская, Транспортная, Экспедиционная, Мухтуйская, Таежная, Ленская, Нагорная, Набережная, Лесная, Интернациональная, Звездная, Целинная, Фабричная, теплопункт-Нижняя школа, СОШ №8, теплопункт МУП «Коммунальщик») – испытание кабельной линии;
-
-							14:00-17:00 – г. Мирный (1-й Пионерский пер., Первомайская, Фрунзе, Индустриальная) – установка шкафа управления на КТП.
-
-							Усть-Алданский район:
-
-							14:00-17:00 – с. Сырдах, с. Арылах, с. Бейдингэ, с. Окоемовка, с. Сасылыкан, с. Тумул, с. Ары-Тит, с. Соттинцы, с. Хоногор. – перевод питания.
-
-							В графике возможны изменения.
+			    			<p>
 							</p>
 
 			    		</div>
@@ -146,29 +123,31 @@
 			    </main>
 			</div>
 
-			<div class="notifications" style="display: none">
-				<div class="boxes">
-					<br>
-					<div class = "notification">
+			<main>
+				<div class="notifications" style="display: none">
+					<div class="boxes">
 						<br>
-						<h3>В вашем районе планируется отключение электроэнергии.</h3>
+						<div class = "notification">
+							<br>
+							<h3>В вашем районе планируется отключение электроэнергии.</h3>
+							<br>
+						</div>
+						<br>
+						<div class = "notification">
+							<br>
+							<h3> Оплатите электроэнергию за апрель месяц. С днем рождения!</h3>
+							<br>
+						</div>
+						<br>
+						<div class = "notification">
+							<br>
+							<h3>Примите участие в общедомовых сборах на установку видеокамер.</h3>
+							<br>
+						</div>
 						<br>
 					</div>
-					<br>
-					<div class = "notification">
-						<br>
-						<h3> Оплатите электроэнергию за апрель месяц. С днем рождения!</h3>
-						<br>
-					</div>
-					<br>
-					<div class = "notification">
-						<br>
-						<h3>Примите участие в общедомовых сборах на установку видеокамер.</h3>
-						<br>
-					</div>
-					<br>
 				</div>
-			</div>
+			</main>
 
 			<main>
 				<div class = "calls" style="display: none">
@@ -259,37 +238,65 @@
 					<div class="boxes">
 						<br>
 						<div style="margin-left: 50px; margin-right: 50px">
-							<h1 style="color:#F76B1C">4883 <font style="font-size: 1.5rem">рублей к оплате за прошедший месяц</font></h1>
+							<h1 style="color:#F76B1C"><span style="font-weight: bolder">4883</span> <font style="font-size: 1.5rem">рублей к оплате за прошедший месяц</font></h1>
 							<div class = "message">
+								</br>
 								<div class = "service_price">
 									<p> Услуги коньержа </p>
 									<bold> 200 </bold>
 								</div>
 								<div class = "service_price">
-									<p> Услуги коньержа </p>
-									<bold> 200 </bold>
+									<p> Вывоз мусора </p>
+									<bold> 150 </bold>
 								</div>
 								<div class = "service_price">
-									<p> Услуги коньержа </p>
-									<bold> 200 </bold>
+									<p> Обслуживание лифта </p>
+									<bold> 230 </bold>
 								</div>
 								<div class = "service_price">
-									<p> Услуги коньержа </p>
-									<bold> 200 </bold>
+									<p> Уборка </p>
+									<bold> 250 </bold>
 								</div>
 								<div class = "service_price">
-									<p> Услуги коньержа </p>
-									<bold> 200 </bold>
+									<p> Капитальный ремонт </p>
+									<bold> 400 </bold>
 								</div>
 								<div class = "service_price">
-									<p> Услуги коньержа </p>
-									<bold> 200 </bold>
+									<p> Электроэнергия </p>
+									<bold> 1700 </bold>
 								</div>
 								<div class = "service_price">
-									<p> Услуги коньержа </p>
-									<bold> 200 </bold>
+									<p> Теплоэнергия </p>
+									<bold> 840 </bold>
+								</div>
+								<div class = "service_price">
+									<p> Горячая вода </p>
+									<bold> 350 </bold>
+								</div>
+								<div class = "service_price">
+									<p> Водоснабжение </p>
+									<bold> 687 </bold>
+								</div>
+								<div class = "service_price">
+									<p> Сервичные сборы </p>
+									<bold> 100 </bold>
 								</div>
 							</div>
+							<br>
+						</div>
+						<div class = "btn"><button class = "pay_btn" style=" height: 38px; padding: 1px; font-size: 1.6rem;"> Оплатить </button></div>
+						<br>
+					</div>
+
+					<br>
+
+
+					</br>
+
+					<div class="boxes">
+						<br>
+						<div style="margin-left: 50px; margin-right: 50px; text-align: center;">
+							<h1 style="color:#F76B1C;"><span style="font-weight: bolder; font-size: 8rem;">9790</span> </br> <font style="font-size: 1.5rem">рублей к оплате всего</font></h1>
 							<br>
 							<div style="text-align: center;">
 								<input id="ex6" type="text" data-slider-min="0" data-slider-max="12" data-slider-id="RC" data-slider-step="1" data-slider-value="0" style="width: 100%;" /><br>
@@ -298,7 +305,7 @@
 						</div>
 						<br>
 
-						<div class = "btn"><button class = "pay_btn"> Оплатить </button></div>
+						<div class = "btn"><button class = "pay_btn" style=" height: 38px; padding: 1px; font-size: 1.6rem;"> Оплатить в рассрочку </button></div>
 						<br>
 					</div>
 				</div>
@@ -386,6 +393,11 @@
 				goPays();
 
 			})
+			$('.nav-right').on('click',function(){
+
+				goNotif();
+
+			})
 
 
 
@@ -423,13 +435,9 @@
 
 			data['news'] = JSON.parse(localStorage.news);
 
-			for(var i=0; i<3; i++){
+			for(var i=0; i<2; i++){
 
 				cats = '';
-
-
-
-				console.log(data['news'][i]['cat']);
 				data['news'][i]['cat'] = JSON.parse(data['news'][i]['cat']);
 
 				for(var j=0; j<data['news'][i]['cat'].length; j++){
