--- a/login.html
+++ b/login.html
@@ -1,9 +1,10 @@
 
 <!doctype html>
-<html class="fixed">
+<html>
 	<head>
 
 	    <meta charset="UTF-8">
+    	<meta name="viewport" content="user-scalable=yes" />
 	    <title></title>
 	    <link rel="stylesheet" href="css/bootstrap.min.css">
 	    <link rel="stylesheet" href="css/style.css">
@@ -35,7 +36,7 @@
 
 	</head>
 
-	<body>
+	<body style="height: 30%">
 		<section class = "logo">
 			<div class = "container">
 				<img src = "img/logo.png">
@@ -63,6 +64,9 @@
 
 
 		<script type="text/javascript">
+
+			//localStorage = JSON.parse(
+			//'{"PHPSESSID":"18c0876a53e36ced34b4e29cab01e938","_ym25328195_lsid":"450025795342","_ym25328195_reqNum":"9","_ym_retryReqs":"{}","crfund":"{\"id\":\"1\",\"type\":\"newDoor\",\"money\":\"27000\",\"needMoney\":\"40000\",\"user\":\"Староста дома Баьылай\",\"title\":\"Сборы на новую дверь подьезда\",\"text\":\"\",\"error\":0,\"cookie\":\"18c0876a53e36ced34b4e29cab01e938\"}","myData":"{\"0\":{\"id\":\"1\",\"userLogin\":\"haseko\",\"date\":\"2018-11-24\",\"kwM\":\"10\",\"kwN\":\"45\",\"priceM\":\"593\",\"priceN\":\"384\",\"totalPrice\":\"291620\"},\"1\":{\"id\":\"2\",\"userLogin\":\"haseko\",\"date\":\"2018-11-25\",\"kwM\":\"11\",\"kwN\":\"29\",\"priceM\":\"593\",\"priceN\":\"384\",\"totalPrice\":\"17659\"},\"2\":{\"id\":\"3\",\"userLogin\":\"haseko\",\"date\":\"2018-11-26\",\"kwM\":\"9\",\"kwN\":\"17\",\"priceM\":\"593\",\"priceN\":\"384\",\"totalPrice\":\"11865\"},\"3\":{\"id\":\"4\",\"userLogin\":\"haseko\",\"date\":\"2018-11-27\",\"kwM\":\"16\",\"kwN\":\"2\",\"priceM\":\"593\",\"priceN\":\"384\",\"totalPrice\":\"10256\"},\"4\":{\"id\":\"5\",\"userLogin\":\"haseko\",\"date\":\"2018-11-28\",\"kwM\":\"8\",\"kwN\":\"25\",\"priceM\":\"593\",\"priceN\":\"384\",\"totalPrice\":\"14344\"},\"5\":{\"id\":\"6\",\"userLogin\":\"haseko\",\"date\":\"2018-11-29\",\"kwM\":\"23\",\"kwN\":\"7\",\"priceM\":\"593\",\"priceN\":\"384\",\"totalPrice\":\"16327\"},\"6\":{\"id\":\"7\",\"userLogin\":\"haseko\",\"date\":\"2018-11-30\",\"kwM\":\"8\",\"kwN\":\"1\",\"priceM\":\"593\",\"priceN\":\"384\",\"totalPrice\":\"5128\"},\"7\":{\"id\":\"8\",\"userLogin\":\"haseko\",\"date\":\"2018-12-01\",\"kwM\":\"10\",\"kwN\":\"1\",\"priceM\":\"593\",\"priceN\":\"384\",\"totalPrice\":\"6314\"},\"text\":\"\",\"error\":0,\"cookie\":\"18c0876a53e36ced34b4e29cab01e938\"}","news":"{\"0\":{\"id\":\"1\",\"title\":\" График плановых работ </br> энергетиков на 30 апреля \",\"content\":\"Для обеспечения потребителей Республики Саха (Якутия) качественной и бесперебойной электроэнергией, специалисты Центральных и Западных электрических сетей ежедневно ведут работы по подключению новых абонентов к электрическим сетям и последовательные ремонтные работы на объектах электросетевого хозяйства, которые невозможны без введений плановых временных ограничений электроснабжения.\\r\\n\\r\\n\\t\\t\\t\\tДля удобства наших потребителей основная часть ремонтных работ проводится в дневное время рабочих будней, когда существенно снижено потребление электроэнергии. Временные ограничения электроснабжения 28 ноября в г. Якутске и ряде районов будут проводиться по следующему графику:\\r\\n\\r\\n\\t\\t\\t\\tг. Якутск:\\r\\n\\r\\n\\t\\t\\t\\t09:00-12:00 – Покровский тракт 10 км – работы по технологическому присоединению потребителей;\\r\\n\\r\\n\\t\\t\\t\\t09:00-12:00 – Якова Потапова 27/1, Лермонтова 26 – работы в охранной зоне энергообъектов;\\r\\n\\r\\n\\t\\t\\t\\t09:00-12:00 – Билибина 42/4 – пасынковка опоры;\\r\\n\\r\\n\\t\\t\\t\\t09:00-17:00 –             1-я Пристанская, 2-я Пристанская (частично), 50 лет Советской Армии 86/3-106 – капитальный ремонт ВЛ;\\r\\n\\r\\n\\t\\t\\t\\t09:00-17:00 – Стерхмкр-н, Сергеляхское поле (частично), Набережная 89, Ушакова 6 – работы по заявкам Якутского отделения Энергосбыта;\\r\\n\\r\\n\\t\\t\\t\\t14:00-17:00 – Лермонтова 26, Малая Марха (частично) – работы в охранной зоне энергообъектов.\\r\\n\\r\\n\\t\\t\\t\\tМирнинский район:\\r\\n\\r\\n\\t\\t\\t\\t10:00-12:00 – г. Мирный (Вилюйская, Иреляхская, Транспортная, Экспедиционная, Мухтуйская, Таежная, Ленская, Нагорная, Набережная, Лесная, Интернациональная, Звездная, Целинная, Фабричная, теплопункт-Нижняя школа, СОШ №8, теплопункт МУП «Коммунальщик») – испытание кабельной линии;\\r\\n\\r\\n\\t\\t\\t\\t14:00-17:00 – г. Мирный (1-й Пионерский пер., Первомайская, Фрунзе, Индустриальная) – установка шкафа управления на КТП.\\r\\n\\r\\n\\t\\t\\t\\tУсть-Алданский район:\\r\\n\\r\\n\\t\\t\\t\\t14:00-17:00 – с. Сырдах, с. Арылах, с. Бейдингэ, с. Окоемовка, с. Сасылыкан, с. Тумул, с. Ары-Тит, с. Соттинцы, с. Хоногор. – перевод питания.\\r\\n\\r\\n\\t\\t\\t\\tВ графике возможны изменения.\\r\\n\\t\\t\\t\\t\",\"cat\":\"[\\\"Новости\\\", \\\"Отключение\\\"]\",\"picture\":\"https://yakutskenergo.ru/upload/medialibrary/fc0/%D0%A6%D0%AD%D0%A1%20%D0%B2%D0%BE%D1%81%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5%20%D1%8D%D0%BB%D0%B5%D0%BA%D1%82%D0%B8%D1%80%D0%BE%D1%81%D0%BD%D0%B0%D0%B1%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.jpg\"},\"1\":{\"id\":\"3\",\"title\":\"Установка приборов учета обязательна!</br>\",\"content\":\"Уважаемые собственники жилых домов, собственники помещений в многоквартирных домах!\\r\\n\\r\\nСогласно вступившим в силу изменениям в статью 13 Федерального закона №ФЗ-261 от 23.11.2009 года «Об энергосбережении и повышении энергетической эффективности и о внесении изменений в отдельные законодательные акты Российской Федерации» (далее – Закон об энергосбережении) вы обязаны в срок до 1 января 2019 года, обеспечить установку и ввод в эксплуатацию соответствующих приборов учета объектов, тепловая нагрузка которых составляет менее 0,2 Гкал/час.\\r\\n\\r\\nВ связи с тем, что тепловые сети ПАО «Якутскэнерго» имеют непосредственное присоединение к тепловым сетям вашего объекта, вы можете обратиться в нашу организацию для заключения договора по установке, замене и (или) эксплуатации приборов учета.\\r\\n\\r\\nОбращаем внимание, что в случае необеспечения установки приборов учета тепловой энергии и введения их в эксплуатацию до 1 января 2019 года, согласно пункту 12 статьи 13 указанного закона об Энергосбережении, собственники жилых домов, собственники помещений в многоквартирных домах, обязаны обеспечить допуск представителей нашей организации к местам установки приборов учета и оплатить расходы на их установку. Тел. для справок 49-88-41.\\r\\n\\r\\nЯкутское отделение Энергосбыта ПАО «Якутскэнерго»\",\"cat\":\"[\\\"Энергосбыт\\\",\\\"Приборы энергоучета\\\"]\",\"picture\":\"https://yakutskenergo.ru/upload/medialibrary/bea/%D0%BB%D0%BE%D0%B3%D0%BE%D1%82%D0%B8%D0%BF-%D0%AF%D0%AD%20%D0%92%D0%95%D0%A0%D0%9D%D0%AB%D0%95%20%D0%A6%D0%92%D0%95%D0%A2%D0%90.png\"},\"text\":\"\",\"error\":0,\"cookie\":\"18c0876a53e36ced34b4e29cab01e938\"}"}');
 
 			$('body').css({
 
@@ -143,10 +147,11 @@
 								data = JSON.parse(e);
 								localStorage.setItem('PHPSESSID', data['cookie']);
 								localStorage.setItem('crfund', JSON.stringify(data));
+								document.location.replace("http://9142767578.myjino.ru/index.html");
 								console.log(data['text']);
-
 							}
 						});
+
 
 					}
 				});
